--- a/management/src/public/base.css
+++ b/management/src/public/base.css
@@ -24,3 +24,14 @@ button{
 input{
     outline: none;
 }
+.clearfix:after{
+    content: '';
+    display: block;
+    clear: both;
+}
+.fl{
+    float: left;
+}
+.fr{
+    float: right;
+}
